maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:47: error: ')' expected but '}' found.
}
^